# work_assistant

horizontal_v1/claude_code/backend/: .env.example  alembic.ini  pyproject.toml
horizontal_v1/claude_code/backend/alembic/: env.py
horizontal_v1/claude_code/backend/app/: __init__.py  main.py
horizontal_v1/claude_code/backend/app/api/v1/: __init__.py  comm.py  open.py
horizontal_v1/claude_code/backend/app/api/v1/base/: __init__.py
horizontal_v1/claude_code/backend/app/api/v1/base/sys/: __init__.py  log.py  param.py
horizontal_v1/claude_code/backend/app/api/v1/chat/: __init__.py  conversation.py
horizontal_v1/claude_code/backend/app/api/v1/dict/: __init__.py  info.py  type.py
horizontal_v1/claude_code/backend/app/api/v1/resume/: __init__.py  callback.py
horizontal_v1/claude_code/backend/app/api/v1/rk/: __init__.py  case.py  customer.py  demand.py  notice.py  supply.py  vendor.py
horizontal_v1/claude_code/backend/app/api/v1/task/: __init__.py  info.py  log.py
horizontal_v1/claude_code/backend/app/core/: __init__.py  cache.py  config.py  database.py  deps.py  exceptions.py  logging.py  pagination.py  redis.py  repository.py  response.py
horizontal_v1/claude_code/backend/app/middleware/: __init__.py  authority.py  logging.py  request_id.py
horizontal_v1/claude_code/backend/app/models/: __init__.py  base.py  dict.py  rk.py  sys.py  task.py
horizontal_v1/claude_code/backend/app/mqtt/: __init__.py  client.py
horizontal_v1/claude_code/backend/app/schemas/: __init__.py  auth.py  base.py  dict.py
horizontal_v1/claude_code/backend/app/services/: __init__.py  auth.py  conf.py  dict.py  log.py  param.py
horizontal_v1/claude_code/backend/app/services/ai/: __init__.py  callback_processor.py  third_party_client.py
horizontal_v1/claude_code/backend/app/services/azure/: __init__.py  blob.py  graph.py  msal.py
horizontal_v1/claude_code/backend/app/services/chat/: __init__.py  dify.py
horizontal_v1/claude_code/backend/app/services/rk/: __init__.py  case.py  customer.py  demand.py  demand_matcher.py  notice.py  resume_processor.py  supply.py  vendor.py
horizontal_v1/claude_code/backend/app/services/task/: __init__.py  scheduler.py
horizontal_v1/claude_code/backend/app/workers/: __init__.py  rabbitmq.py
horizontal_v1/claude_code/frontend/: .env.example  index.html  package.json  vite.config.ts
horizontal_v1/codex/backend/: Dockerfile  __init__.py  alembic.ini  main.py  requirements.txt
horizontal_v1/codex/frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
horizontal_v1/qwn_code/backend/: .env  .env.example  README.md  alembic.ini  main.py  requirements.txt
horizontal_v1/qwn_code/frontend/: Dockerfile  (+7 more)
(+250 files in other folders)
