[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "work-assistant-v2"
version = "2.0.0"
description = "Work Assistant V2 - Unified FastAPI Backend"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Work Assistant Team" }
]

dependencies = [
    # FastAPI & Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "httpx>=0.27.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",

    # Redis
    "redis>=5.0.0",

    # Message Queue
    "aio-pika>=9.4.0",
    "faststream[rabbit]>=0.5.0",

    # MQTT
    "paho-mqtt>=2.0.0",

    # Configuration & Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # AI & LangChain
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.50.0",

    # Azure Integration
    "azure-storage-blob>=12.25.0",
    "msal>=1.33.0",

    # Document Processing
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pandas>=2.2.0",
    "lxml>=5.0.0",

    # Logging
    "python-json-logger>=2.0.0",
    "structlog>=24.0.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
work-assistant = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise-without-from-inside-except
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"
